--- a/cadastro_concluido.html
+++ b/cadastro_concluido.html
@@ -1,74 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doguito Petshop | Cadastro de produto</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./assets/css/base/base.css">
-    <link rel="stylesheet" href="./assets/css/componentes/cabecalho.css">
-    <link rel="stylesheet" href="./assets/css/componentes/cartao.css">
-    <link rel="stylesheet" href="./assets/css/cadastra_cliente.css">
-    <link rel="stylesheet" href="./assets/css/componentes/inputs.css">
-    <link rel="stylesheet" href="./assets/css/componentes/botao.css">
-    <link rel="stylesheet" href="./assets/css/cadastro_produto.css">
-</head>
-<body>
-    <header class="cabecalho container">
-        <img src="./assets/img/doguitoadm.svg" alt="Logo Doguito" class="cabecalho__logo">
-        <nav>
-            <ul class="cabecalho__lista-navegacao">
-                <li class="cabecalho__link"><a href="#">Dashboard</a></li>
-                <li class="cabecalho__link"><a href="#">Produtos</a></li>
-                <li class="cabecalho__link"><a href="lista_cliente.html">Clientes </a></li>
-                <li class="cabecalho__link"><a href="#">Pets</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="container flex flex--centro flex--coluna">
-        <section class="cartao cadastro">
-            <h1 class="cartao__titulo">Cadastrar um produto</h1>
-            <form action="./cadastro_produto_concluido.html" class="flex flex--coluna">
-                <div class="input-container">
-                    <input name="nome" id="nome" class="input" type="text" placeholder="Nome" data-tipo="nome" required>
-                    <label class="input-label" for="nome">Nome</label>
-                    <span class="input-mensagem-erro">Este campo não está válido</span>
-                </div>
-                <div class="input-container cadastro__preco-container">
-                    <input name="preco" id="preco" class="input" type="text" placeholder="Preço">
-                    <label class="input-label" for="preco">Preço</label>
-                    <span class="input-mensagem-erro">Este campo não está válido</span>
-                </div>
-                <div class="input-container cadastro__descricao-container">
-                    <input class="input" name="descricao" id="descricao" placeholder="Descrição">
-                    <label class="input-label" for="descricao">Descrição</label>
-                    <span class="input-mensagem-erro">Este campo não está válido</span>
-                </div>
-                <div class="input-container">
-                    <input name="quantidade" id="quantidade" class="input" type="number" placeholder="Quantidade em estoque" data-tipo="quantidade" required>
-                    <label class="input-label" for="quantidade">Quantidade em estoque</label>
-                    <span class="input-mensagem-erro">Este campo não está válido</span>
-                </div>
-                <button class="botao">Cadastrar produto</button>
-            </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Doguito Petshop | Cadastro concluído</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/base/base.css" />
+    <link rel="stylesheet" href="./assets/css/cadastro_concluido.css" />
+    <link rel="stylesheet" href="./assets/css/componentes/cartao.css" />
+    <link rel="stylesheet" href="./assets/css/componentes/inputs.css" />
+    <link rel="stylesheet" href="./assets/css/componentes/botao.css" />
+  </head>
+  <body>
+    <main class="container flex flex--coluna flex--centro">
+      <div class="cadastro-cabecalho">
+        <img
+          src="./assets/img/doguito.svg"
+          alt="Logo Doguito"
+          class="cadastro-cabecalho__logo"
+        />
+        <h1 class="cadastro-cabecalho__titulo">PetShop</h1>
+      </div>
+      <section class="cadastro-cartao cartao">
+        <span class="cadastro-cartao__icone-concluido"></span>
+        <h1 class="cadastro-cartao__titulo cartao__titulo">
+          Sua conta já está funcionando!
+        </h1>
+        <a href="#" class="botao">Entrar na sua conta</a>
+      </section>
+    </main>
+  </body>
 </html>
-<script src="js/simple-mask-money.umd.js"></script>
-<script>
-    const optionsReais = {
-        afterFormat(e) { console.log('afterFormat', e); },
-        allowNegative: false,
-        beforeFormat(e) { console.log('beforeFormat', e); },
-        negativeSignAfter: false,
-        prefix: 'R$ ',
-        suffix: '',
-        fixed: true,
-        fractionDigits: 2,
-        decimalSeparator: ',',
-        thousandsSeparator: '.',
-        cursor: 'end'
-    };
-
-    SimpleMaskMoney.setMask('#preco', optionsReais);
-</script>
