--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -1,105 +1,74 @@
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doguito Petshop | Cadastro de produto</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/base/base.css" />
-    <link rel="stylesheet" href="./assets/css/componentes/cabecalho.css" />
-    <link rel="stylesheet" href="./assets/css/componentes/cartao.css" />
-    <link rel="stylesheet" href="./assets/css/cadastra_cliente.css" />
-    <link rel="stylesheet" href="./assets/css/componentes/inputs.css" />
-    <link rel="stylesheet" href="./assets/css/componentes/botao.css" />
-    <link rel="stylesheet" href="./assets/css/cadastro_produto.css" />
-
-    <!-- Incluindo a biblioteca SimpleMaskMoney -->
-    <script src="https://cdn.jsdelivr.net/npm/simple-mask-money@latest/dist/simple-mask-money.min.js"></script>
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="./assets/css/base/base.css">
+    <link rel="stylesheet" href="./assets/css/componentes/cabecalho.css">
+    <link rel="stylesheet" href="./assets/css/componentes/cartao.css">
+    <link rel="stylesheet" href="./assets/css/cadastra_cliente.css">
+    <link rel="stylesheet" href="./assets/css/componentes/inputs.css">
+    <link rel="stylesheet" href="./assets/css/componentes/botao.css">
+    <link rel="stylesheet" href="./assets/css/cadastro_produto.css">
+</head>
+<body>
     <header class="cabecalho container">
-      <img
-        src="./assets/img/doguitoadm.svg"
-        alt="Logo Doguito"
-        class="cabecalho__logo"
-      />
-      <nav>
-        <ul class="cabecalho__lista-navegacao">
-          <li class="cabecalho__link"><a href="#">Dashboard</a></li>
-          <li class="cabecalho__link"><a href="#">Produtos</a></li>
-          <li class="cabecalho__link">
-            <a href="lista_cliente.html">Clientes</a>
-          </li>
-          <li class="cabecalho__link"><a href="#">Pets</a></li>
-        </ul>
-      </nav>
+        <img src="./assets/img/doguitoadm.svg" alt="Logo Doguito" class="cabecalho__logo">
+        <nav>
+            <ul class="cabecalho__lista-navegacao">
+                <li class="cabecalho__link"><a href="#">Dashboard</a></li>
+                <li class="cabecalho__link"><a href="#">Produtos</a></li>
+                <li class="cabecalho__link"><a href="lista_cliente.html">Clientes </a></li>
+                <li class="cabecalho__link"><a href="#">Pets</a></li>
+            </ul>
+        </nav>
     </header>
     <main class="container flex flex--centro flex--coluna">
-      <section class="cartao cadastro">
-        <h1 class="cartao__titulo">Cadastrar um produto</h1>
-        <form
-          action="./cadastro_produto_concluido.html"
-          class="flex flex--coluna"
-        >
-          <div class="input-container">
-            <input
-              name="nome"
-              id="nome"
-              class="input"
-              type="text"
-              placeholder="Nome"
-            />
-            <label class="input-label" for="nome">Nome</label>
-            <span class="input-mensagem-erro">Este campo não está válido</span>
-          </div>
-
-          <!-- Campo Preço com a máscara monetária -->
-          <div class="input-container cadastro__preco-container">
-            <input
-              name="preco"
-              id="preco"
-              class="input"
-              type="text"
-              placeholder="Preço"
-              required
-            />
-            <label class="input-label" for="preco">Preço</label>
-            <span class="input-mensagem-erro">Este campo não está válido</span>
-          </div>
-
-          <div class="input-container cadastro__descricao-container">
-            <input
-              class="input"
-              name="descricao"
-              id="descricao"
-              placeholder="Descrição"
-            />
-            <label class="input-label" for="descricao">Descrição</label>
-            <span class="input-mensagem-erro">Este campo não está válido</span>
-          </div>
-
-          <button class="botao">Cadastrar produto</button>
-        </form>
-      </section>
-    </main>
-
-    <script>
-      // Aplique a máscara monetária no campo de preço
-      const precoInput = document.getElementById("preco");
-      SimpleMaskMoney.setMask(precoInput, {
-        prefix: "R$ ",
+        <section class="cartao cadastro">
+            <h1 class="cartao__titulo">Cadastrar um produto</h1>
+            <form action="./cadastro_produto_concluido.html" class="flex flex--coluna">
+                <div class="input-container">
+                    <input name="nome" id="nome" class="input" type="text" placeholder="Nome" data-tipo="nome" required>
+                    <label class="input-label" for="nome">Nome</label>
+                    <span class="input-mensagem-erro">Este campo não está válido</span>
+                </div>
+                <div class="input-container cadastro__preco-container">
+                    <input name="preco" id="preco" class="input" type="text" placeholder="Preço">
+                    <label class="input-label" for="preco">Preço</label>
+                    <span class="input-mensagem-erro">Este campo não está válido</span>
+                </div>
+                <div class="input-container cadastro__descricao-container">
+                    <input class="input" name="descricao" id="descricao" placeholder="Descrição">
+                    <label class="input-label" for="descricao">Descrição</label>
+                    <span class="input-mensagem-erro">Este campo não está válido</span>
+                </div>
+                <div class="input-container">
+                    <input name="quantidade" id="quantidade" class="input" type="number" placeholder="Quantidade em estoque" data-tipo="quantidade" required>
+                    <label class="input-label" for="quantidade">Quantidade em estoque</label>
+                    <span class="input-mensagem-erro">Este campo não está válido</span>
+                </div>
+                <button class="botao">Cadastrar produto</button>
+            </form>
+</body>
+</html>
+<script src="js/simple-mask-money.umd.js"></script>
+<script>
+    const optionsReais = {
+        afterFormat(e) { console.log('afterFormat', e); },
+        allowNegative: false,
+        beforeFormat(e) { console.log('beforeFormat', e); },
+        negativeSignAfter: false,
+        prefix: 'R$ ',
+        suffix: '',
         fixed: true,
         fractionDigits: 2,
-        decimalSeparator: ",",
-        thousandsSeparator: ".",
-      });
-    </script>
-  </body>
-</html>
+        decimalSeparator: ',',
+        thousandsSeparator: '.',
+        cursor: 'end'
+    };
+
+    SimpleMaskMoney.setMask('#preco', optionsReais);
+</script>
